--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-slot": "^1.2.2",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "postcss": "^8.5.3",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,7 +34,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
