--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -26,6 +27,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "prisma": "^6.7.0",
@@ -41,12 +43,12 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
